--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -815,8 +815,17 @@ jobs:
         - 3.7
         - 3.8
         - 3.9
+        - 3.10
+        - 3.11
+        - 3.12
 
         include:
+          - python: 3.12
+            args: -DCMAKE_CXX_STANDARD=20
+          - python: 3.11
+            args: -DCMAKE_CXX_STANDARD=20
+          - python: 3.10
+            args: -DCMAKE_CXX_STANDARD=20
           - python: 3.9
             args: -DCMAKE_CXX_STANDARD=20
           - python: 3.8
