Add back `-DCMAKE_CXX_FLAGS="-D_=1"` but do not install boost in that case.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,13 +45,14 @@ jobs:
         # existing keys match.
         #
         # We support an optional key: args, for cmake args
-        # TODO: Find a platform to test -DCMAKE_CXX_FLAGS="-D_=1"
         include:
           # Just add a key
           - runs-on: ubuntu-20.04
             python: '3.8'
             args: >
               -DPYBIND11_FINDPYTHON=ON
+              -DCMAKE_CXX_FLAGS="-D_=1"
+            exercise_D_: 1
           - runs-on: ubuntu-20.04
             python: 'pypy-3.8'
             args: >
@@ -82,7 +83,7 @@ jobs:
 
     - name: Setup Boost (Linux)
       # Can't use boost + define _
-      if: runner.os == 'Linux'
+      if: runner.os == 'Linux' && matrix.exercise_D_ != 1
       run: sudo apt-get install libboost-dev
 
     - name: Setup Boost (macOS)
