--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -121,8 +121,10 @@ set(PYBIND11_TEST_FILES
     test_class
     test_class_sh_basic
     test_class_sh_disowning
+    test_class_sh_disowning_mi
     test_class_sh_factory_constructors
     test_class_sh_inheritance
+    test_class_sh_mi_thunks
     test_class_sh_shared_ptr_copy_move
     test_class_sh_trampoline_basic
     test_class_sh_trampoline_self_life_support
