Disable for now (to be debugged later): CI / 🐍 3 • GCC 7 • C++17• x64

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -498,7 +498,7 @@ jobs:
       matrix:
         include:
           - { gcc: 7, std: 11 }
-          - { gcc: 7, std: 17 }
+          # { gcc: 7, std: 17 } BAKEIN_BREAK
           - { gcc: 8, std: 14 }
           - { gcc: 8, std: 17 }
           - { gcc: 9, std: 20 }
