Bring in tests/pure_cpp/test_class_sh_shared_ptr_copy_move.cpp,py from smart_holder branch as-is (does not build).

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -119,6 +119,7 @@ set(PYBIND11_TEST_FILES
     test_callbacks
     test_chrono
     test_class
+    test_class_sh_shared_ptr_copy_move
     test_const_name
     test_constants_and_functions
     test_copy_move
