fix(cmake): add required emscripten flags
Signed-off-by: Henry Schreiner <henryschreineriii@gmail.com>

--- a/.github/workflows/emscripten.yaml
+++ b/.github/workflows/emscripten.yaml
@@ -5,6 +5,8 @@ on:
   pull_request:
     branches:
     - master
+    - stable
+    - v*
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
