--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,15 +71,15 @@ jobs:
           - runs-on: ubuntu-latest
             python: '3.12'
             args: >
-              -DPYBIND11_USE_SMART_HOLDER_AS_DEFAULT
+              -DCMAKE_CXX_FLAGS="-DPYBIND11_USE_SMART_HOLDER_AS_DEFAULT"
           - runs-on: macos-13
             python: '3.12'
             args: >
-              -DPYBIND11_USE_SMART_HOLDER_AS_DEFAULT
+              -DCMAKE_CXX_FLAGS="-DPYBIND11_USE_SMART_HOLDER_AS_DEFAULT"
           - runs-on: windows-2022
             python: '3.12'
             args: >
-              -DPYBIND11_USE_SMART_HOLDER_AS_DEFAULT
+              -DCMAKE_CXX_FLAGS="/DPYBIND11_USE_SMART_HOLDER_AS_DEFAULT"
 
     name: "🐍 ${{ matrix.python }} • ${{ matrix.runs-on }} • x64 ${{ matrix.args }}"
     runs-on: ${{ matrix.runs-on }}
