rename exo_planet.cpp -> exo_planet_pybind11.cpp

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -219,7 +219,7 @@ tests_extra_targets("test_exceptions.py;test_local_bindings.py;test_stl.py;test_
 # And add additional targets for other tests.
 tests_extra_targets("test_exceptions.py" "cross_module_interleaved_error_already_set")
 tests_extra_targets("test_gil_scoped.py" "cross_module_gil_utils")
-tests_extra_targets("test_cpp_transporter.py" "exo_planet")
+tests_extra_targets("test_cpp_transporter.py" "exo_planet_pybind11")
 
 set(PYBIND11_EIGEN_REPO
     "https://gitlab.com/libeigen/eigen.git"
