--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ on:
 permissions: read-all
 
 concurrency:
-  group: test-${{ github.ref }} # TO BE REMOVED BEFORE MERGING INTO master
+  group: test-${{ github.ref }}
   cancel-in-progress: true
 
 env:
