Factor out pybind11/compat/pybind11_platform_abi_id.h

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -142,6 +142,7 @@ set(PYBIND11_HEADERS
     include/pybind11/cast.h
     include/pybind11/chrono.h
     include/pybind11/common.h
+    include/pybind11/compat/pybind11_platform_abi_id.h
     include/pybind11/compat/wrap_include_python_h.h
     include/pybind11/complex.h
     include/pybind11/options.h
