Give up on compiling exo_planet_c_api.cpp with MSVC `/EHs-c-`:
There was one trouble maker (all other jobs worked):

Visual Studio 15 2017:

```
cl : Command line warning D9025: overriding '/EHc' with '/EHc-' [C:\projects\pybind11\tests\exo_planet_c_api.vcxproj]
...
C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Tools\MSVC\14.16.27023\include\xlocale(319): error C2220: warning treated as error - no 'object' file generated [C:\projects\pybind11\tests\exo_planet_c_api.vcxproj]
C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Tools\MSVC\14.16.27023\include\xlocale(319): warning C4530: C++ exception handler used, but unwind semantics are not enabled. Specify /EHsc
```

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -493,9 +493,7 @@ foreach(target ${test_targets})
   endif()
 
   if("${target}" STREQUAL "exo_planet_c_api")
-    if(MSVC)
-      target_compile_options(${target} PRIVATE /EHs-c-)
-    elseif(CMAKE_CXX_COMPILER_ID MATCHES "(GNU|Intel|Clang|NVHPC)")
+    if(CMAKE_CXX_COMPILER_ID MATCHES "(GNU|Intel|Clang|NVHPC)")
       target_compile_options(${target} PRIVATE -fno-exceptions)
     endif()
   endif()
