`type_caster_incomplete_type` sketch

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -149,6 +149,7 @@ set(PYBIND11_TEST_FILES
     test_stl_binders
     test_tagbased_polymorphic
     test_thread
+    test_type_caster_incomplete_type
     test_type_caster_pyobject_ptr
     test_type_caster_std_function_specializations
     test_union
