--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -389,6 +389,9 @@ function(pybind11_enable_warnings target_name)
     if(DEFINED CMAKE_CXX_STANDARD AND NOT CMAKE_CXX_STANDARD VERSION_LESS 20)
       target_compile_options(${target_name} PRIVATE -Wpedantic)
     endif()
+    if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+      target_compile_options(${target_name} PRIVATE -Wno-gnu-zero-variadic-macro-arguments)
+    endif()
   endif()
 
   if(PYBIND11_WERROR)
