--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -199,7 +199,7 @@ jobs:
       run: |
         uv pip install --python=python --system setuptools
         pytest tests/extra_setuptools
-      if: "!(matrix.runs-on == 'windows-2022')"
+      if: matrix.runs-on != 'windows-2022'
 
   manylinux:
     name: Manylinux on 🐍 3.13t • GIL
